[package]
name = "chromium"
description = "Helps add some stability to your metal!"
version = "0.0.2"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/chromium"
edition = "2018"
license = "Zlib"

[features]
default = []

# Enables additional support for types in the `alloc` crate. Usage of this
# feature is inherently dangerous because a person _could_ think that it's safe
# to go and move and move memory between global allocators. THAT IS NOT SAFE. If
# you move memory between allocators you can get heap corruption, which is one
# of the worst forms of UB.
#
# This feature is USE AT YOUR OWN RISK and so it's got "unsafe" right in the
# name.
unsafe_alloc = []

[package.metadata.docs.rs]
all-features = true
